// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fetch-profiles > <link> 要素が2つ以上存在するとき > 有効な Profile Set が得られる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "profiles": "{Signed Document Profile または Signed Originator Profile}",
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "profiles": "{別の Signed Document Profile または Signed Originator Profile}",
  },
]
`;

exports[`fetch-profiles > <script>要素から Profile Set を取得する > <script> から profile set を取得できる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;

exports[`fetch-profiles > <script>要素から Profile Set を取得する > <script> と <link> から profile set を取得できる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.com",
    ],
    "profile": [
      "1/ps.json",
    ],
  },
]
`;
